p10-wikijs/k8s/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: wikijs-app
  labels:
    app: wikijs
spec:
  ports:
    - port: 5432
  selector:
    app: wikijs
    tier: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: wikijs-app
  labels:
    app: wikijs
spec:
  selector:
    matchLabels:
      app: wikijs
      tier: db
  template:
    metadata:
      namespace: wikijs-app
      labels:
        app: wikijs
        tier: db
    spec:
      containers:
        - image: postgres:9.6.2-alpine
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: pv-wikijs-postgres
