p10-wikijs/k8s/wikijs.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs-app
  labels:
    app: wikijs
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: wikijs
    tier: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wikijs-app
  labels:
    app: wikijs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wikijs
      tier: app
  template:
    metadata:
      namespace: wikijs-app
      labels:
        app: wikijs
        tier: app
    spec:
      containers:
        - image: requarks/wiki:2.5
          name: wikijs
          ports:
            - containerPort: 3000
