p10-wikijs/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  namespace: wikijs-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: wikijs.192.168.0.100.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 80
